syntax = "proto3";
package casablanca;
option go_package = "casablanca/node/protocol";

// TODO: fix comments

/**
 * FullEvent is a hashed and signed event.
 * hash is used as event id. Subsequent events reference this event by hash.
 */
message Envelope {
    /**
     * Hash of BaseEvent formatted as 0x1234abcd
     * While hash can be recalculated from the BaseEvent, having it here explicitely
     * makes it easier to work with event.
     * For the event to be valid, must match hash of BaseEvent.
     */
    bytes hash = 1;

    /**
     * Signature in the form 0x1234
     * For the event to be valid, signature must match base.creatorAddress or
     * be signed by base.delegateSig.
     */
    bytes signature = 2;

    bytes event = 3;
}

message StreamEvent {
    /**
     * Address in the form 0xABcD...
     * Checksummed according to EIP-55.
     * Creator address can be recovered from the signature, but having
     * it explicitly in the event makes it easier to work with the event.
     * For the event to be valid:
     * If delegateSig is present, creatorAddress must match delegateSig.
     * If delegateSig is not present, creatorAddress must match event signature.
     */
    bytes creator_address = 1;

     /**
      * Signature that signs public key of the keypair that is used to sign the event.
      * If present, creatorAddress must match delegateSig and
      * FullEvent.signature's public key must be signed by delegateSig.
      *
      * delegateSig is used to delegate signing authority to another address.
      * Specifically, it is used to delegate signing authority to an app-managed
      * keypair from the user's wallet.
      *
      * Server nodes sign node-produced events with their own keypair and do not
      * need to use delegateSig.
      */
    bytes delegage_sig = 2;
 
    /** Salt ensures that similar messages are not hashed to the same value. genId() from id.ts may be used. */
    /** TODO: move salt to inception event */
    bytes salt = 3;
 
    /** Hashes of the preceding leaf events in the stream. Empty array for the inception event. */
    repeated bytes prev_events = 4;
 
    /** Variable-type payload. */
    Payload payload = 5; 
}

/**
 * Derived event is produces by server when there should be additional event to compliment
 * received event. For example, when user joins a space through event in the space stream, server will produce a derived event
 * in a user stream to indicate that user joined a particual space.
 *
 * EventRef is used to reference the event that caused the derived event to be produced.
 */
message EventRef {
    string stream_id = 1;
    bytes hash = 2;
    bytes signature = 3;
}

message Payload {
    message Inception {
        string stream_id = 1;
        StreamKind stream_kind = 2;
        string space_id = 3;
    }
    
    message UserStreamOp {
        StreamOp op = 1;
        string stream_id = 2;
        string inviter_id = 3;
        EventRef origin_event = 4;
    }
    
    message JoinableStream {
        StreamOp op = 1;
        string user_id = 2;
    }
    
    message Channel {
        ChannelOp op = 1;
        string channel_id = 2;
        EventRef origin_event = 3;
    }
    
    message Message {
        string text = 1;
    }
    
    oneof payload {
        Inception inception = 1;
        UserStreamOp user_stream_op = 2;
        JoinableStream joinable_stream = 3;
        Channel channel = 4;
        Message message = 5;
    }
}

enum StreamKind {
    SK_UNSPECIFIED = 0;
    SK_USER = 1;
    SK_SPACE = 2;
    SK_CHANNEL = 3;
}


enum StreamOp {
    SO_UNSPECIFIED = 0;
    SO_INVITE = 1;
    SO_JOIN = 2;
    SO_LEAVE = 3;
}


enum ChannelOp {
    CO_UNSPECIFIED = 0;
    CO_CREATED = 1;
    CO_DELETED = 2;
}

message StreamAndCookie {
    repeated Envelope events = 1;
    bytes next_sync_cookie = 2;
    bytes original_sync_cookie = 3;
    string stream_id = 4;
}

message CreateStreamRequest {
    repeated Envelope events = 1;
}

message CreateStreamResponse {
    bytes sync_cookie = 1;
}

message GetStreamRequest {
    string stream_id = 1;
}

message GetStreamResponse {
    StreamAndCookie stream = 1;
}

message AddEventRequest {
    string stream_id = 1;
    Envelope event = 2;
}

message AddEventResponse {}

message SyncPos {
    string stream_id = 1;
    bytes sync_cookie = 2;
}

message SyncStreamsRequest {
    repeated SyncPos sync_pos = 1;
    uint32 timeout_ms = 2;
}

message SyncStreamsResponse {
    repeated StreamAndCookie streams = 1;
}

message InfoRequest {
    string debug = 1;
}

message InfoResponse {
    string graffiti = 1;
}

service StreamService {
    rpc CreateStream(CreateStreamRequest) returns (CreateStreamResponse);
    rpc GetStream(GetStreamRequest) returns (GetStreamResponse);
    rpc AddEvent(AddEventRequest) returns (AddEventResponse);
    rpc SyncStreams(SyncStreamsRequest) returns (SyncStreamsResponse);
    rpc Info(InfoRequest) returns (InfoResponse);
}

enum Err {
    ERR_UNSPECIFIED = 0;
    DEBUG_ERROR = 1;
    BAD_STREAM_ID = 2;
    BAD_STREAM_CREATION_PARAMS = 3;
    STREAM_ALREADY_EXISTS = 4;
    INTERNAL_ERROR_SWITCH = 5;
    BAD_EVENT_ID = 6;
    BAD_EVENT_SIGNATURE = 7;
    BAD_HASH_FORMAT = 8;
    BAD_PREV_EVENTS = 9;
    NO_EVENT_SPECIFIED = 10;
    BAD_EVENT = 11;
    USER_CANT_POST = 12;
    STREAM_NOT_FOUND = 13;
    STREAM_BAD_HASHES = 14;
    STREAM_EMPTY = 15;
    STREAM_BAD_EVENT = 16;
    BAD_DELEGATE_SIG = 17;
    BAD_PUBLIC_KEY = 18;
    BAD_PAYLOAD = 19;
    BAD_HEX_STRING = 20;
}
